A-Release Changed the UI and features to let bye command close the app after 3 seconds.