@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
@@ -22,13 +21,19 @@ import duke.task.Todo;
  * Stores and Retrieves data from a given .txt file and loads it into TaskList.
  */
 public class Storage {
-    private String filePath;
+    private File file;
 
     /**
-     * Stores filePath.
+     * Stores test case inputs
      */
     public Storage() {
-        this.filePath = System.getProperty("user.dir") + "/data/duke.txt";
+    }
+
+    /**
+     * Stores data of inputs.
+     */
+    public Storage(String pathName) {
+        this.file = new File(Paths.get(pathName).toString());
     }
 
     /**
@@ -37,11 +42,9 @@ public class Storage {
      * @param taskList TaskList of data to be saved
      * @throws IOException  If file is corrupt
      */
-    public static void saveData(TaskList taskList) {
+    public void saveData(TaskList taskList) {
         try {
-            Path currPath = Paths.get("");
-            FileWriter fileWriter = new FileWriter(currPath.toAbsolutePath().toString()
-                    + "/src/main/java/duke/duke.txt");
+            FileWriter fileWriter = new FileWriter(file.getAbsolutePath());
             for (int i = 0; i < taskList.getSize(); i++) {
                 String write = taskList.getInd(i) + "\n";
                 fileWriter.write(write);
@@ -58,109 +61,150 @@ public class Storage {
      * @return list TaskList of all loaded data
      * @throws FileNotFoundException  If file cannot be found in path
      */
-    public static TaskList loadData() throws IOException {
-        Path currPath = Paths.get("");
-        Path dukePath = Paths.get(currPath.toAbsolutePath().toString()
-                + "/src/main/java/duke/duke.txt");
-        TaskList list = new TaskList();
+    public TaskList loadData() throws IOException {
+        Boolean doesFileExist = java.nio.file.Files.exists(Path.of(file.toString()));
+        TaskList taskList = new TaskList();
 
-        if (Files.exists(dukePath)) { //load list data
-            File info = new File(String.valueOf(dukePath));
-            Scanner sc = new Scanner(info);
-            while (sc.hasNextLine()) {
-                String task = sc.nextLine();
-                String[] taskAsArray = task.split("");
-                if (taskAsArray[1].equals("T")) {
-                    Boolean isDone = false;
-                    if (taskAsArray[4].equals("X")) {
-                        isDone = true;
+        if (doesFileExist) {
+            try {
+                File info = new File(this.file.toString());
+                Scanner sc = new Scanner(info);
+                while (sc.hasNextLine()) {
+                    String task = sc.nextLine();
+                    String[] taskAsArray = task.split("");
+                    String taskType = taskAsArray[1];
+                    if (taskType.equals("T")) {
+                        loadTodo(taskList, taskAsArray);
+                    } else if (taskType.equals("D")) {
+                        loadDeadline(taskList, taskAsArray);
+                    } else if (taskType.equals("E")) {
+                        loadEvent(taskList, taskAsArray);
                     }
-                    String taskDetails = "";
-                    for (int j = 7; j < taskAsArray.length; j++) {
-                        taskDetails += taskAsArray[j];
-                    }
-
-                    Task todoTask = new Todo(taskDetails);
-                    assert todoTask.isEmpty() : "Task should not be empty.";
-
-                    if (isDone) {
-                        todoTask.setDone();
-                    }
-                    list.addToDo(todoTask);
-                } else if (taskAsArray[1].equals("D")) {
-                    Boolean isDone = false;
-                    if (taskAsArray[4].equals("X")) {
-                        isDone = true;
-                    }
-                    String taskDetailsDateAndTime = "";
-                    for (int j = 7; j < taskAsArray.length; j++) {
-                        taskDetailsDateAndTime += taskAsArray[j];
-                    }
-                    String[] taskDetailsDateAndTimeAsArray = taskDetailsDateAndTime.split("[(]");
-                    String[] taskDetailsAsArray = taskDetailsDateAndTimeAsArray[0].split("");
-                    String taskDetails = "";
-                    for (int k = 0; k < taskDetailsAsArray.length - 1; k++) {
-                        taskDetails += taskDetailsAsArray[k];
-                    }
-
-                    String taskDateAndTime = taskDetailsDateAndTimeAsArray[1];
-                    String[] taskDateAndTimeAsArray = taskDateAndTime.split("by: ", 2);
-                    taskDateAndTime = taskDateAndTimeAsArray[1];
-                    String dateAndTime = "";
-                    taskDateAndTimeAsArray = taskDateAndTime.split("");
-                    for (int k = 0; k < taskDateAndTimeAsArray.length - 1; k++) {
-                        dateAndTime += taskDateAndTimeAsArray[k];
-                    }
-
-                    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd yyyy HH:mm");
-                    LocalDateTime dateTime = LocalDateTime.parse(dateAndTime, formatter);
-                    Task deadlineTask = new Deadline(taskDetails, dateTime);
-                    assert deadlineTask.isEmpty() : "Task should not be empty.";
-
-                    if (isDone) {
-                        deadlineTask.setDone();
-                    }
-                    list.addDeadline(deadlineTask);
-                } else if (taskAsArray[1].equals("E")) {
-                    Boolean isDone = false;
-                    if (taskAsArray[4].equals("X")) {
-                        isDone = true;
-                    }
-                    String taskDetailsDateAndTime = "";
-                    for (int j = 7; j < taskAsArray.length; j++) {
-                        taskDetailsDateAndTime += taskAsArray[j];
-                    }
-                    String[] taskDetailsDateAndTimeAsArray = taskDetailsDateAndTime.split("[(]");
-                    String[] taskDetailsAsArray = taskDetailsDateAndTimeAsArray[0].split("");
-                    String taskDetails = "";
-                    for (int k = 0; k < taskDetailsAsArray.length - 1; k++) {
-                        taskDetails += taskDetailsAsArray[k];
-                    }
-
-                    String taskDateAndTime = taskDetailsDateAndTimeAsArray[1];
-                    String[] taskDateAndTimeAsArray = taskDateAndTime.split("at: ", 2);
-                    taskDateAndTime = taskDateAndTimeAsArray[1];
-                    String dateAndTime = "";
-                    taskDateAndTimeAsArray = taskDateAndTime.split("");
-                    for (int k = 0; k < taskDateAndTimeAsArray.length - 1; k++) {
-                        dateAndTime += taskDateAndTimeAsArray[k];
-                    }
-
-                    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd yyyy HH:mm");
-                    LocalDateTime dateTime = LocalDateTime.parse(dateAndTime, formatter);
-                    Task eventTask = new Event(taskDetails, dateTime);
-                    assert eventTask.isEmpty() : "Task should not be empty.";
-
-                    if (isDone) {
-                        eventTask.setDone();
-                    }
-                    list.addEvent(eventTask);
                 }
+                sc.close();
+            } catch (IOException e) {
+                e.getMessage();
             }
         } else { //create new file in folder
-            File f = new File(currPath.toAbsolutePath().toString() + "/duke/duke.txt");
+            File folder = new File("data");
+            File file = new File(this.file.toString());
+
+            if (!folder.exists()) {
+                folder.mkdirs();
+            }
         }
-        return list;
+        return taskList;
+
     }
+
+    /**
+     * Method to load todo tasks
+     *
+     * @param taskList is the task list to add the task to
+     * @param taskAsArray input loaded from data.txt file
+     */
+    public void loadTodo(TaskList taskList, String[] taskAsArray) {
+        Boolean isDone = false;
+        if (taskAsArray[4].equals("X")) {
+            isDone = true;
+        }
+        String taskDetails = "";
+        for (int j = 7; j < taskAsArray.length; j++) {
+            taskDetails += taskAsArray[j];
+        }
+
+        Task todoTask = new Todo(taskDetails);
+        assert todoTask.isEmpty() : "Task should not be empty.";
+
+        if (isDone) {
+            todoTask.setDone();
+        }
+        taskList.addToDo(todoTask);
+    }
+
+    /**
+     * Method to load deadline tasks
+     *
+     * @param taskList is the task list to add the task to
+     * @param taskAsArray input loaded from data.txt file
+     */
+    public void loadDeadline(TaskList taskList, String[] taskAsArray) {
+        Boolean isDone = false;
+        if (taskAsArray[4].equals("X")) {
+            isDone = true;
+        }
+        String taskDetailsDateAndTime = "";
+        for (int j = 7; j < taskAsArray.length; j++) {
+            taskDetailsDateAndTime += taskAsArray[j];
+        }
+        String[] taskDetailsDateAndTimeAsArray = taskDetailsDateAndTime.split("[(]");
+        String[] taskDetailsAsArray = taskDetailsDateAndTimeAsArray[0].split("");
+        String taskDetails = "";
+        for (int k = 0; k < taskDetailsAsArray.length - 1; k++) {
+            taskDetails += taskDetailsAsArray[k];
+        }
+
+        String taskDateAndTime = taskDetailsDateAndTimeAsArray[1];
+        String[] taskDateAndTimeAsArray = taskDateAndTime.split("by: ", 2);
+        taskDateAndTime = taskDateAndTimeAsArray[1];
+        String dateAndTime = "";
+        taskDateAndTimeAsArray = taskDateAndTime.split("");
+        for (int k = 0; k < taskDateAndTimeAsArray.length - 1; k++) {
+            dateAndTime += taskDateAndTimeAsArray[k];
+        }
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd yyyy HH:mm");
+        LocalDateTime dateTime = LocalDateTime.parse(dateAndTime, formatter);
+        Task deadlineTask = new Deadline(taskDetails, dateTime);
+        assert deadlineTask.isEmpty() : "Task should not be empty.";
+
+        if (isDone) {
+            deadlineTask.setDone();
+        }
+        taskList.addDeadline(deadlineTask);
+    }
+
+    /**
+     * Method to load event tasks
+     *
+     * @param taskList is the task list to add the task to
+     * @param taskAsArray input loaded from data.txt file
+     */
+    public void loadEvent(TaskList taskList, String[] taskAsArray) {
+        Boolean isDone = false;
+        if (taskAsArray[4].equals("X")) {
+            isDone = true;
+        }
+        String taskDetailsDateAndTime = "";
+        for (int j = 7; j < taskAsArray.length; j++) {
+            taskDetailsDateAndTime += taskAsArray[j];
+        }
+        String[] taskDetailsDateAndTimeAsArray = taskDetailsDateAndTime.split("[(]");
+        String[] taskDetailsAsArray = taskDetailsDateAndTimeAsArray[0].split("");
+        String taskDetails = "";
+        for (int k = 0; k < taskDetailsAsArray.length - 1; k++) {
+            taskDetails += taskDetailsAsArray[k];
+        }
+
+        String taskDateAndTime = taskDetailsDateAndTimeAsArray[1];
+        String[] taskDateAndTimeAsArray = taskDateAndTime.split("at: ", 2);
+        taskDateAndTime = taskDateAndTimeAsArray[1];
+        String dateAndTime = "";
+        taskDateAndTimeAsArray = taskDateAndTime.split("");
+        for (int k = 0; k < taskDateAndTimeAsArray.length - 1; k++) {
+            dateAndTime += taskDateAndTimeAsArray[k];
+        }
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd yyyy HH:mm");
+        LocalDateTime dateTime = LocalDateTime.parse(dateAndTime, formatter);
+        Task eventTask = new Event(taskDetails, dateTime);
+        assert eventTask.isEmpty() : "Task should not be empty.";
+
+        if (isDone) {
+            eventTask.setDone();
+        }
+        taskList.addEvent(eventTask);
+    }
+
 }
 
